--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ ul {
     line-height: 1.17;
     text-transform: uppercase;
     color: #4d5ae5;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.03em;
 }
 
 .logo-std {
@@ -30,13 +30,14 @@ ul {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 } 
 
 
-.navlink:hover,
-.navlink:focus {
-color: #404bbf;
+.std-sp:hover,
+.std-sp:active {
+    color: #404bbf;
 }
 
 .contact {
@@ -47,6 +48,7 @@ color: #404bbf;
     font-size: 16px;
     line-height: 1.5;
     font-style: normal;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
@@ -60,6 +62,7 @@ color: #404bbf;
     line-height: 1.07;  
     color: #fff;
     text-align: center;
+    letter-spacing: 0.02em;
 }
 
 .opening-sect-btn {
@@ -84,6 +87,7 @@ color: #404bbf;
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
+    letter-spacing: 0.02em;
 }
 
 .third-h {
@@ -91,12 +95,14 @@ color: #404bbf;
     font-size: 20px;
     line-height: 1.2;
     color: #2e2f42;
+    letter-spacing: 0.02em;
 }
 
 .infos-p {
     color: #434455;
     font-size: 16px;
     line-height: 1.5;  
+    letter-spacing: 0.02em;
 }
 
 .team-sect {
@@ -107,15 +113,21 @@ color: #404bbf;
     background-color: #fff;
 }
 
-.portf-img {
-    width: 360px;
-    height: 420px;
-}
 
 .footer {
     background-color: #2e2f42;
 }
 
+.footer-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+
+}
 .footer-std {
     color: #f4f4fd;
 }
